--- a/spaceHack/src/app/Meniu.form
+++ b/spaceHack/src/app/Meniu.form
@@ -29,15 +29,19 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace pref="80" max="32767" attributes="0"/>
+              <EmptySpace pref="94" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="btPasi" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
-                  <Component id="jbEvidenta" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="btBanci" alignment="2" min="-2" pref="99" max="-2" attributes="0"/>
-                  <Component id="lbMesaj" alignment="2" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="btPasi" alignment="2" min="-2" pref="136" max="-2" attributes="0"/>
+                  <Component id="jbEvidenta" alignment="2" min="-2" pref="143" max="-2" attributes="0"/>
+                  <Component id="btBanci" alignment="2" min="-2" pref="146" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="80" max="32767" attributes="0"/>
+              <EmptySpace pref="94" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="lbMesaj" min="-2" pref="174" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -54,7 +58,7 @@
               <Component id="jbEvidenta" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btBanci" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="109" max="32767" attributes="0"/>
+              <EmptySpace pref="103" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -62,11 +66,17 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="18" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="MENIU"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btPasi">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Primii Pasi"/>
       </Properties>
       <Events>
@@ -75,6 +85,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jbEvidenta">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Evidenta Acte"/>
       </Properties>
       <Events>
@@ -83,6 +96,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btBanci">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Oferte Banci"/>
       </Properties>
       <Events>
@@ -90,6 +106,11 @@
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lbMesaj">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
