--- a/spaceHack/src/app/jfDocumente.form
+++ b/spaceHack/src/app/jfDocumente.form
@@ -187,6 +187,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jbIncarcare">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Incarca acum"/>
       </Properties>
       <Events>
@@ -211,6 +214,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jbSalvare">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Salvare"/>
       </Properties>
       <Events>
@@ -219,6 +225,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jbIesire">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Iesire"/>
       </Properties>
       <Events>
